--- a/sensor.yaml
+++ b/sensor.yaml
@@ -10,7 +10,7 @@
 - platform: shodan
   name: shodan
   api_key: !secret 'api_shodan'
-  query: 8.3.80.33
+  query: !secret 'query_shodan'
 - platform: waste_collection_schedule
   name: Trash Collection
   add_days_to: true
