remove unused config options for fontawesome

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -9,7 +9,7 @@ default_config:
 device_tracker: !include 'device_tracker.yaml'
 ffmpeg:
 folder_watcher: !include 'folder_watcher.yaml'
-fontawesome: !include 'fontawesome.yaml'
+fontawesome:
 frontend: !include 'frontend.yaml'
 google_assistant: !include 'google_assistant.yaml'
 history:
