--- a/switch.yaml
+++ b/switch.yaml
@@ -1,3 +1,6 @@
 - platform: wake_on_lan
   mac: 34:2F:BD:5E:3D:12
   name: Nintendo Switch
+- platform: wake_on_lan
+  mac: 58:47:ca:72:68:ef
+  name: Docker
