--- a/scripts/lock/lock_or_unlock_door.yaml
+++ b/scripts/lock/lock_or_unlock_door.yaml
@@ -12,18 +12,12 @@ fields:
         - domain: lock
 sequence:
 - choose:
-  - conditions:
-    - condition: state
-      entity_id: '{{ lock_entity_id }}'
-      state: locked
+  - condition: '{{ states(lock_entity_id) == ''locked'' }}'
     sequence:
     - service: lock.unlock
       target:
         entity_id: '{{ lock_entity_id }}'
-  - conditions:
-    - condition: state
-      entity_id: '{{ lock_entity_id }}'
-      state: unlocked
+  - condition: '{{ states(lock_entity_id) == ''unlocked'' }}'
     sequence:
     - service: lock.lock
       target:
