--- a/automations/mobile/action_toggle_lock.yaml
+++ b/automations/mobile/action_toggle_lock.yaml
@@ -1,11 +1,11 @@
-id: mobile_action_lock
+id: mobile_action_toggle_lock
 alias: 'Mobile Action: Toggle Lock'
 initial_state: true
 trigger:
 - platform: event
   event_type: ios.action_fired
-condition: '{{ len(trigger.event.data.actionName.split(''.'')) == 2 and trigger.event.data.actionName.split(''.'')[0]
-  == ''lock'' }}'
+condition: '{% set action_split = trigger.event.data.actionName.split(''.'') %}{{
+  action_split | length == 2 and action_split[0] == ''lock'' }}'
 action:
   alias: Lock the door specified in the notification
   service: script.lock_or_unlock_door
