--- a/zha.yaml
+++ b/zha.yaml
@@ -1,7 +1,7 @@
 zigpy_config:
   ota:
-  - 'type: "ikea_provider"'
-  - 'type: "ledvance_provider"'
-  - 'type: "salus_provider"'
-  - 'type: "inovelli_provider"'
-  - 'type: "thirdreality_provider"'
+  - type: ikea_provider
+  - type: ledvance_provider
+  - type: salus_provider
+  - type: inovelli_provider
+  - type: thirdreality_provider
